--- a/Pipfile
+++ b/Pipfile
@@ -4,54 +4,105 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-superset = {editable = true, path = "."}
-colorama = "==0.3.9"
-click = "==6.7"
-bleach = "==2.1.2"
-"boto3" = "==1.4.7"
-botocore = "==1.7.48"
+alembic = "==1.0.0"
+amqp = "==2.3.2"
+"asn1crypto" = "==0.24.0"
+billiard = "==3.5.0.4"
+bleach = "==3.0.2"
+beautifulsoup4 = "==4.6.0"
+cachetools = "==3.0.0"
+cchardet = "==1.0.0"
 celery = "==4.2.0"
+certifi = "==2018.8.24"
+cffi = "==1.11.5"
+chardet = "==3.0.4"
+click = "==6.7"
+colorama = "==0.3.9"
+"contextlib2" = "==0.5.5"
+croniter = "==0.3.25"
 cryptography = "==1.9"
+decorator = "==4.3.0"
+defusedxml = "==0.5.0"
+flask-babel = "==0.11.1"
 flower = "==0.9.2"
 future = "==0.16.0"
 geopy = "==1.11.0"
+google-auth = "==1.6.1"
+gsheetsdb = "==0.1.8"
 gunicorn = "==19.8.0"
 humanize = "==0.5.1"
 idna = "==2.6"
+ijson = "==2.3"
 isodate = "==0.6.0"
+itsdangerous = "==0.24"
+jdcal = "==1.4"
+jsonlines = "==1.2.0"
+jsonschema = "==2.6.0"
+kombu = "==4.2.1"
+linear-tsv = "==1.1.0"
+mo-future = "==2.20.18317"
+moz-sql-parser = "==2.19.18318"
+numpy = "==1.15.2"
+openpyxl = "==2.4.11"
 pandas = "==0.23.1"
 parsedatetime = "==2.0.0"
 "pathlib2" = "==2.3.0"
 polyline = "==1.3.2"
-pydruid = "==0.4.4"
-"psycopg2-binary" = "==2.7.5"
+py = "==1.7.0"
+"pyasn1-modules" = "==0.2.2"
+"pyasn1" = "==0.4.4"
+pycparser = "==2.19"
+pydruid = "==0.5.0"
+pyparsing = "==2.3.0"
 python-dateutil = "==2.6.1"
+python-editor = "==1.0.3"
 python-geohash = "==0.8.5"
-requests = "==2.18.4"
+"python3-openid" = "==3.1.0"
+pytz = "==2018.5"
+requests = "==2.20.0"
+retry = "==0.9.2"
+"rfc3986" = "==1.1.0"
+rsa = "==4.0"
+sasl = "==0.2.1"
+selenium = "==3.14.0"
 simplejson = "==3.15.0"
 six = "==1.11.0"
 sqlparse = "==0.2.4"
 tableschema = "==1.1.0"
+tabulator = "==1.15.0"
 thrift = "==0.11.0"
+tornado = "==5.1.1"
 unicodecsv = "==0.14.1"
-"contextlib2" = "==0.5.5"
+"urllib3" = "==1.22"
+vine = "==1.1.4"
+webencodings = "==0.5.1"
+xlrd = "==1.1.0"
 elasticsearch = "==5.5.3"
-Flask = "==0.12.2"
-Flask-WTF = "==0.14.2"
-PyYAML = "==3.12"
-Unidecode = "==1.0.22"
-Flask-AppBuilder = "==1.10.0"
+python-ldap = "==3.1.0"
+Babel = "==2.6.0"
+et_xmlfile = "==1.0.1"
+Flask-AppBuilder = "==1.12.1"
 Flask-Caching = "==1.4.0"
 Flask-Compress = "==1.4.0"
+Flask-Login = "==0.4.1"
 Flask-Migrate = "==2.1.1"
-Flask-SQLAlchemy = "==2.1"
-Markdown = "==2.6.11"
-PyHive = "==0.5.1"
-SQLAlchemy = "==1.2.2"
+Flask-OpenID = "==1.2.5"
+Flask-SQLAlchemy = "==2.3.2"
+Flask-WTF = "==0.14.2"
+Flask = "==1.0.2"
+"Jinja2" = "==2.10"
+Mako = "==1.0.7"
+Markdown = "==3.0"
+MarkupSafe = "==1.0"
+PyHive = "==0.6.0"
+PyYAML = "==3.13"
 SQLAlchemy-Utils = "==0.32.21"
+SQLAlchemy = "==1.2.2"
 thrift_sasl = "==0.3.0"
-pipenv = "*"
-python-ldap = "==3.1.0"
+Unidecode = "==1.0.22"
+Werkzeug = "==0.14.1"
+WTForms = "==2.2.1"
+bottleneck = "==1.2.1"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
