--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -17,7 +17,7 @@
     "build": "NODE_ENV=production webpack --mode=production --colors --progress",
     "lint": "eslint --ignore-path=.eslintignore --ext .js,.jsx . && tslint -c tslint.json ./{src,spec}/**/*.ts{,x}",
     "lint-fix": "eslint --fix --ignore-path=.eslintignore --ext .js,.jsx . && tslint -c tslint.json --fix ./{src,spec}/**/*.ts{,x}",
-    "sync-backend": "babel-node --presets env src/syncBackend.js",
+    "sync-backend": "babel-node --preset=@babel/preset-env src/syncBackend.js",
     "cypress": "cypress",
     "cypress-debug": "cypress open --config watchForFileChanges=true"
   },
@@ -134,22 +134,25 @@
     "viewport-mercator-project": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@types/jest": "^23.3.5",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "^21.3.0-beta.15",
+    "babel-loader": "^8.0.4",
     "babel-plugin-css-modules-transform": "^1.1.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-airbnb": "^3.2.0",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
@@ -173,7 +176,7 @@
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "ignore-styles": "^5.0.1",
     "imports-loader": "^0.7.1",
-    "jest": "^23.6.0",
+    "jest": "^21.3.0-beta.15",
     "jsdom": "9.12.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -183,6 +186,7 @@
     "po2json": "^0.4.5",
     "prettier": "^1.12.1",
     "redux-mock-store": "^1.2.3",
+    "regenerator-runtime": "^0.13.1",
     "sinon": "^4.5.0",
     "speed-measure-webpack-plugin": "^1.2.3",
     "style-loader": "^0.21.0",
