--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -146,7 +146,7 @@
     "@types/react-dom": "^16.0.9",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^21.3.0-beta.15",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-css-modules-transform": "^1.1.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
@@ -176,7 +176,7 @@
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "ignore-styles": "^5.0.1",
     "imports-loader": "^0.7.1",
-    "jest": "^21.3.0-beta.15",
+    "jest": "^23.6.0",
     "jsdom": "9.12.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
