--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ flask==1.0.2
 flower==0.9.2
 future==0.16.0            # via pyhive
 geopy==1.11.0
+google-auth==1.6.1        # via gsheetsdb
+gsheetsdb==0.1.9
 gunicorn==19.8.0
 humanize==0.5.1
 idna==2.6
