Add to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
+include NOTICE
+include LICENSE
+graft licenses/
 include README.md
 recursive-include superset/data *
 recursive-include superset/migrations *
