--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,7 @@ mysqlclient==1.3.13
 pip-tools==3.1.0
 psycopg2-binary==2.7.5
 pycodestyle==2.4.0
+pyhive==0.6.1
 pylint==1.9.2
 python-dotenv==0.10.1
 redis==2.10.6
