--- a/Pipfile
+++ b/Pipfile
@@ -52,6 +52,8 @@ SQLAlchemy-Utils = "==0.32.21"
 thrift_sasl = "==0.3.0"
 pipenv = "*"
 python-ldap = "==3.1.0"
+requests-kerberos = "==0.12.0"
+django = "==2.1.5"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
