feat(custom_filter_ldap): Custom ldap filter support (#52)
* feat(custom_filter_ldap): Custom ldap filter support

UIC-947

* feat(custom_filter_ldap): remove commented code

UIC-947

* feat(custom_filter_ldap): Ansible changes added

UIC-947

* feat(custom_filter_ldap): AUTH_LDAP_SEARCH_FILTER env added in superset_config.py

UIC-947

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -110,3 +110,4 @@ SUPERSET_AUTH_LDAP_EMAIL_FIELD: "mail"
 SUPERSET_AUTH_LDAP_ALLOW_SELF_SIGNED: False
 SUPERSET_AUTH_LDAP_APPEND_DOMAIN: ""
 SUPERSET_AUTH_LDAP_USERNAME_FORMAT: ""
+SUPERSET_AUTH_LDAP_SEARCH_FILTER: ""
