feat(upgrade): fix superset upgrade  issue
upgrade db
docker build

UIC-932

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,7 @@ ENV LANG=C.UTF-8 \
     
 RUN useradd --user-group --create-home --no-log-init --shell /bin/bash ${user}
 
-RUN apt-get install -y build-essential libssl-dev \
+RUN apt-get update -y && apt-get install -y build-essential libssl-dev \
     libffi-dev python3-dev libsasl2-dev libldap2-dev \
     libsasl2-modules libsasl2-2 libsasl2-modules-gssapi-mit krb5-user
     
