--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -58,6 +58,28 @@
     "@superset-ui/number-format": "^0.9.3",
     "@superset-ui/time-format": "^0.9.3",
     "@superset-ui/translation": "^0.9.3",
+    "@superset-ui/legacy-preset-chart-big-number": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-calendar": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-chord": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-country-map": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-event-flow": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-force-directed": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-heatmap": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-histogram": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-horizon": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-iframe": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-markup": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-paired-t-test": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-parallel-coordinates": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-partition": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-pivot-table": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-rose": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-sankey": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-sunburst": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-table": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-treemap": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-word-cloud": "^0.0.1-alpha.0",
+    "@superset-ui/legacy-plugin-chart-world-map": "^0.0.1-alpha.0",
     "@vx/legend": "^0.0.170",
     "@vx/responsive": "0.0.172",
     "@vx/scale": "^0.0.165",
