feat(upgrade):do update in docker file
update docker file to reduce size
fix docker build  issues

UIC-932

--- a/.dockerignore
+++ b/.dockerignore
@@ -37,3 +37,9 @@ install/
 superset/assets/node_modules/
 superset/assets/cypress/
 superset/assets/coverage/
+venv/
+contrib/docker/
+docker/
+learnings/
+licenses/
+
