--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,33 +10,49 @@ ENV LANG=C.UTF-8 \
     
 RUN useradd --user-group --create-home --no-log-init --shell /bin/bash ${user}
 
-RUN apt-get update -y && apt-get install -y build-essential libssl-dev \
+RUN apt-get update -y
+
+# Install extra useful tool for development
+RUN apt-get install -y vim 
+
+RUN apt-get install -y build-essential libssl-dev \
     libffi-dev python3-dev libsasl2-dev libldap2-dev \
-    libsasl2-modules libsasl2-2 libsasl2-modules-gssapi-mit krb5-user
+    libsasl2-modules libsasl2-2 libsasl2-modules-gssapi-mit krb5-user 
+
     
-RUN mkdir -p $HOME/incubator-superset
-
-RUN mkdir -p /etc/security/keytabs/
-
-RUN mkdir -p /etc/cert/
+RUN mkdir -p $HOME/incubator-superset \
+    mkdir -p /etc/security/keytabs/ \
+    mkdir -p /etc/cert/
 
 WORKDIR $HOME/incubator-superset
 
+# Install nodejs for custom build
+# https://superset.incubator.apache.org/installation.html#making-your-own-build
+# https://nodejs.org/en/download/package-manager/
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash - \
+    && apt-get install -y nodejs
+
 COPY ./ ./
 
-RUN pip install --upgrade setuptools pip && pip install wheel && python ./setup.py bdist_wheel && pip install ./dist/*.whl
+RUN pip install --upgrade setuptools pip && pip install wheel \
+&& python ./setup.py bdist_wheel \
+&& pip install ./dist/*.whl \
+&& rm -rf /root/.cache/pip
 
-# Install nodejs for custom build
-# https://github.com/apache/incubator-superset/blob/master/docs/installation.rst#making-your-own-build
-# https://nodejs.org/en/download/package-manager/
-RUN curl -sL https://deb.nodesource.com/setup_8.x |  bash -
-RUN apt-get install -y nodejs
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
-    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list; \
-    apt-get update; \
-    apt-get install -y yarn
 
-RUN cd superset/assets && yarn && yarn run build && cd ../../
+RUN cd superset/assets  && npm ci  \
+&& npm run sync-backend \
+&& npm run build  \
+&& rm -rf node_modules \
+&& npm cache clean --force
+
+RUN apt-get remove -y \
+    \*-dev \
+    build-essential \
+    python-wheel
+
+   
+RUN apt-get purge --auto-remove -y nodejs
 
 ENV PATH=/home/${user}/incubator-superset/superset/bin:$PATH \
     PYTHONPATH=./superset/:$PYTHONPATH
@@ -49,6 +65,6 @@ RUN chown -R ${user}:${user} $HOME
 
 USER ${user}
 
-EXPOSE 8088
-
 ENTRYPOINT ["docker-init.sh"]
+
+EXPOSE 8088
