#[UIC-925] Merging changes to master from release/3.3.0 (#62)
* chore(version-update): Updated version

* fix(docker): fixed issue of frontend not able to build

UIC-932

* Feature/hive query support (#48)

* feat(hive-sql): convert default timerange sql  where clause to partitioned hive sql

add support for convert timerange sql to partitioned hive sql
make logic configurable

UIC-823

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,7 +47,7 @@ RUN python ./setup.py bdist_wheel \
     && rm -rf /root/.cache/pip
 
 
-RUN cd superset/assets  && npm ci  \
+RUN cd superset/assets && npm install \
     && npm run sync-backend \
     && npm run build  \
     && rm -rf node_modules \
