feat(rename-app-title): Add support renaming of title to ease rebranded deployment (#67)
UIC-1025

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -111,3 +111,4 @@ SUPERSET_AUTH_LDAP_ALLOW_SELF_SIGNED: False
 SUPERSET_AUTH_LDAP_APPEND_DOMAIN: ""
 SUPERSET_AUTH_LDAP_USERNAME_FORMAT: ""
 SUPERSET_AUTH_LDAP_SEARCH_FILTER: ""
+RVF_APP_NAME: "Dashboard Builder"
