add snowflake library to requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,3 +91,4 @@ webencodings==0.5.1       # via html5lib
 werkzeug==0.14.1          # via flask
 wtforms==2.2.1            # via flask-wtf
 xlrd==1.1.0               # via tabulator
+snowflake-sqlalchemy
