--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+superset = {editable = true, path = "."}
+botocore = "==1.7.48"
+"psycopg2-binary" = "==2.7.5"
+Unidecode = "==1.0.22"
+tox = "==3.1.2"
 alembic = "==1.0.0"
 amqp = "==2.3.2"
 "asn1crypto" = "==0.24.0"
@@ -20,7 +25,7 @@ click = "==6.7"
 colorama = "==0.3.9"
 "contextlib2" = "==0.5.5"
 croniter = "==0.3.25"
-cryptography = "==1.9"
+cryptography = "==2.4.2"
 decorator = "==4.3.0"
 defusedxml = "==0.5.0"
 flask-babel = "==0.11.1"
@@ -81,7 +86,7 @@ elasticsearch = "==5.5.3"
 python-ldap = "==3.1.0"
 Babel = "==2.6.0"
 et_xmlfile = "==1.0.1"
-Flask-AppBuilder = "==1.12.1"
+Flask-AppBuilder = "==1.12.3"
 Flask-Caching = "==1.4.0"
 Flask-Compress = "==1.4.0"
 Flask-Login = "==0.4.1"
@@ -94,15 +99,15 @@ Flask = "==1.0.2"
 Mako = "==1.0.7"
 Markdown = "==3.0"
 MarkupSafe = "==1.0"
-PyHive = "==0.6.0"
+PyHive = "==0.6.1"
 PyYAML = "==3.13"
 SQLAlchemy-Utils = "==0.32.21"
 SQLAlchemy = "==1.2.2"
 thrift_sasl = "==0.3.0"
 pipenv = "*"
-python-ldap = "==3.1.0"
 requests-kerberos = "==0.12.0"
 django = "==2.1.5"
+python-dotenv = "==0.10.1"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
@@ -118,7 +123,6 @@ mysqlclient = "==1.3.12"
 pylint = "==1.9.2"
 redis = "==2.10.6"
 statsd = "==3.2.2"
-tox = "==3.1.2"
 Flask-Cors = "==3.0.3"
 
 [requires]
