#[UIC-998] AES encryption of  users confidential detail (#70)
* fix(aes-encryption): did AES encryption of  users confidential details before sending to server

did AES encryption of  users confidential details before sending to server

UIC-998

--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -66,6 +66,7 @@
     "bootstrap-slider": "^10.0.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.5",
+    "crypto-js": "3.1.9-1",
     "d3": "^3.5.17",
     "d3-array": "^1.2.4",
     "d3-cloud": "^1.2.1",
