--- a/Pipfile
+++ b/Pipfile
@@ -108,6 +108,7 @@ pipenv = "*"
 requests-kerberos = "==0.12.0"
 django = "==2.1.5"
 python-dotenv = "==0.10.1"
+pycrypto = "==2.6.1"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
