--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -206,6 +206,7 @@
     "typescript": "^3.1.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.19.0",
+    "webpack-merge": "^4.2.1",
     "webpack-assets-manifest": "^3.0.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.1",
