Lightweight pipelines POC

--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -117,7 +117,8 @@
     "react-dom": "^16.4.1",
     "react-gravatar": "^2.6.1",
     "react-hot-loader": "^4.3.6",
-    "react-map-gl": "^4.0.10",
+    "react-jsonschema-form": "^1.2.0",
+    "react-map-gl": "^3.0.4",
     "react-markdown": "^3.3.0",
     "react-redux": "^5.0.2",
     "react-search-input": "^0.11.3",
