fix(session): expose session lifetime variable for deployment (#75)
expose session lifetime variable for deployment

UIC-1000

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -113,3 +113,4 @@ SUPERSET_AUTH_LDAP_APPEND_DOMAIN: ""
 SUPERSET_AUTH_LDAP_USERNAME_FORMAT: ""
 SUPERSET_AUTH_LDAP_SEARCH_FILTER: ""
 RVF_APP_NAME: "Dashboard Builder"
+SUPERSET_SESSION_LIFETIME_SECONDS: "3600" # stale session timeout
