--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ asn1crypto==0.24.0        # via cryptography
 babel==2.6.0              # via flask-babel, flower
 billiard==3.5.0.4         # via celery
 bleach==3.0.2
-boto3==1.4.7
-botocore==1.7.48
 cchardet==1.0.0           # via tabulator
 celery==4.2.0
 certifi==2018.8.24        # via requests
@@ -21,7 +19,7 @@ click==6.7
 colorama==0.3.9
 contextlib2==0.5.5
 cryptography==2.4.2
-croniter==0.3.26
+decorator==4.3.0          # via retry
 defusedxml==0.5.0         # via python3-openid
 docutils==0.14            # via botocore
 et-xmlfile==1.0.1         # via openpyxl
@@ -60,6 +58,7 @@ pandas==0.23.1
 parsedatetime==2.0.0
 pathlib2==2.3.0
 polyline==1.3.2
+py==1.7.0                 # via retry
 pycparser==2.19           # via cffi
 pydruid==0.5.0
 pyhive==0.5.1
@@ -69,10 +68,9 @@ python-geohash==0.8.5
 python3-openid==3.1.0     # via flask-openid
 pytz==2018.5              # via babel, celery, flower, pandas
 pyyaml==3.13
-requests==2.18.4
-rfc3986==1.1.0            # via tableschema
-s3transfer==0.1.13        # via boto3
-sasl==0.2.1               # via thrift-sasl
+requests==2.20.0
+retry==0.9.2
+selenium==3.141.0
 simplejson==3.15.0
 six==1.11.0               # via bleach, cryptography, isodate, jsonlines, linear-tsv, pathlib2, polyline, pydruid, python-dateutil, sasl, sqlalchemy-utils, tableschema, tabulator, thrift
 sqlalchemy-utils==0.32.21
