--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@
 alembic==1.0.0            # via flask-migrate
 amqp==2.3.2               # via kombu
 asn1crypto==0.24.0        # via cryptography
-babel==2.6.0              # via flask-babel, flower
+babel==2.6.0              # via flask-babel
 billiard==3.5.0.4         # via celery
 bleach==3.0.2
+boto3==1.4.7
+botocore==1.7.48
 cchardet==1.0.0           # via tabulator
 celery==4.2.0
 certifi==2018.8.24        # via requests
@@ -20,6 +22,7 @@ colorama==0.3.9
 contextlib2==0.5.5
 croniter==0.3.26
 cryptography==2.4.2
+decorator==4.3.0          # via retry
 defusedxml==0.5.0         # via python3-openid
 docutils==0.14            # via botocore
 et-xmlfile==1.0.1         # via openpyxl
@@ -59,6 +62,7 @@ pandas==0.23.1
 parsedatetime==2.0.0
 pathlib2==2.3.0
 polyline==1.3.2
+py==1.7.0                 # via retry
 pycparser==2.19           # via cffi
 pydruid==0.4.4
 pyhive==0.5.1
@@ -68,7 +72,9 @@ python-geohash==0.8.5
 python3-openid==3.1.0     # via flask-openid
 pytz==2018.5              # via babel, celery, flower, pandas
 pyyaml==3.13
-requests==2.18.4
+requests==2.20.0
+retry==0.9.2
+selenium==3.141.0
 rfc3986==1.1.0            # via tableschema
 s3transfer==0.1.13        # via boto3
 sasl==0.2.1               # via thrift-sasl
@@ -90,5 +96,7 @@ vine==1.1.4               # via amqp
 webencodings==0.5.1       # via bleach
 werkzeug==0.14.1          # via flask
 wtforms==2.2.1            # via flask-wtf
+wtforms-json==0.3.3
 xlrd==1.1.0               # via tabulator
 snowflake-sqlalchemy
+awscli==1.11.180
