--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -111,4 +111,5 @@ SUPERSET_AUTH_LDAP_APPEND_DOMAIN: ""
 SUPERSET_AUTH_LDAP_USERNAME_FORMAT: ""
 SUPERSET_AUTH_LDAP_SEARCH_FILTER: ""
 RVF_APP_NAME: "Dashboard Builder"
+RVF_HELP_ENABLED: False
 SUPERSET_SESSION_LIFETIME_SECONDS: "3600" # stale session timeout
