--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/tasks/main.yml
@@ -48,6 +48,9 @@
     - name: superset-cert-configmap
       file: superset-cert-configmap.yaml
       type: configmap
+    - name: superset-nginx-configmap
+      file: superset-nginx-configmap.yaml
+      type: configmap  
     - name: superset-deployment
       file: superset-deployment.yaml
       type: Deployment
