#[UIC-835] Enabled unit tests execution on CI (#85)
* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

* feat(enable-CI): enabling unittest on CI

UIC-835

--- a/tox.ini
+++ b/tox.ini
@@ -47,9 +47,10 @@ require-code = true
 [testenv]
 commands =
     pipenv install
+    sh {toxinidir}/scripts/create_postgresDB.sh
     {toxinidir}/superset/bin/superset db upgrade
     nosetests tests/load_examples_test.py
-    nosetests -e load_examples_test {posargs}
+    nosetests -e load_examples_test {posargs} --with-xunit --cover-xml
 deps =
     pipenv
     coverage
