--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,8 @@ pathlib2==2.3.0
 polyline==1.3.2
 py==1.7.0                 # via retry
 pycparser==2.19           # via cffi
-pydruid==0.5.0
+#pydruid==0.5.0
+git+https://github.com/switchdin/pydruid.git@registered-lookups # pydruid
 python-dateutil==2.6.1
 python-editor==1.0.3      # via alembic
 python-geohash==0.8.5
