Fix Docker dependency

--- a/contrib/docker/Dockerfile
+++ b/contrib/docker/Dockerfile
@@ -28,22 +28,21 @@ RUN apt-get update -y
 RUN apt-get install -y unixodbc-dev unixodbc-bin unixodbc
 RUN apt-get install -y alien
 RUN wget -P /home/superset/ http://download.dremio.com/odbc-driver/1.3.22.1055/dremio-odbc-1.3.22.1055-1.x86_64.rpm && \
-    alien -k /home/superset/dremio-odbc-1.3.22.1055-1.x86_64.rpm --scripts && \
-    dpkg -i /home/superset/dremio-odbc_1.3.22.1055-1_amd64.deb    
+    alien -k -i /home/superset/dremio-odbc-1.3.22.1055-1.x86_64.rpm --scripts
+RUN apt-get update -y
 
 # Build sqlalchemy_dremio
 RUN git clone https://github.com/wschroederga/sqlalchemy_dremio.git && \
-    cd sqlalchemy  && \
+    cd sqlalchemy_dremio  && \
     make clean  && \
-    pip setup.py sdist  && \
-    pip setup.py bdist_wheel  && \
+    python3 setup.py sdist  && \
+    python3 setup.py bdist_wheel  && \
     ls -l dist  && \
-# Run tests
-    pip sqlalchemy_dremio/tests/conftest.py  && \
 # Install Package
-    pip setup.py install
-
-RUN apt-get update -y
+    apt install unixodbc-dev -y  && \
+    python3 setup.py install && \
+# Run tests
+    # python3 tests/conftest.py
 
 # Install dependencies to fix `curl https support error` and `elaying package configuration warning`
 RUN apt-get install -y apt-transport-https apt-utils
