--- a/contrib/docker/Dockerfile
+++ b/contrib/docker/Dockerfile
@@ -33,7 +33,7 @@ RUN apt-get install -y build-essential libssl-dev \
     libffi-dev python3-dev libsasl2-dev libldap2-dev libxi-dev
 
 # Install extra useful tool for development
-RUN apt-get install -y vim less postgresql-client redis-tools
+RUN apt-get install -y vim less mysql-client redis-tools
 
 # Install nodejs for custom build
 # https://superset.incubator.apache.org/installation.html#making-your-own-build
