--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ polyline==1.3.2
 py==1.7.0                 # via retry
 pycparser==2.19           # via cffi
 pydruid==0.5.0
+pyjwt==1.7.1              # via flask-appbuilder
 python-dateutil==2.6.1
 python-editor==1.0.3      # via alembic
 python-geohash==0.8.5
