--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ requests==2.20.0
 retry==0.9.2
 selenium==3.141.0
 simplejson==3.15.0
-six==1.11.0               # via bleach, cryptography, isodate, pathlib2, polyline, pydruid, python-dateutil, sqlalchemy-utils, wtforms-json
+six==1.11.0               # via bleach, cryptography, isodate, pathlib2, polyline, pydruid, python-dateutil, sqlalchemy-utils
 sqlalchemy-utils==0.32.21
 sqlalchemy==1.2.18
 sqlparse==0.2.4
@@ -70,5 +70,4 @@ urllib3==1.22             # via requests, selenium
 vine==1.1.4               # via amqp
 webencodings==0.5.1       # via bleach
 werkzeug==0.14.1          # via flask
-wtforms-json==0.3.3
-wtforms==2.2.1            # via flask-wtf, wtforms-json
+wtforms==2.2.1            # via flask-wtf
