#[UIC-1121] Enable Unit test Execution on CI environment for Frond-end(Javascript) (#89)
* UIC-1121 Enable js-test-ci

* UIC-1121 Enable js-test-ci

* feat(enable-unittest): Enable unit test execution

* feat(enable-unittest): Enable unit test execution

* feat(enable-unittest): Enable unit test execution

* feat(enable-unittest): Enable unit test execution

UIC-1121

* feat(enable-unittest): Enable unit test execution

UIC-1121

* feat(enable-unittest): Enable unit test execution

UIC-1121

* feat(enable-unittest): Enable unit test execution

UIC-1121

--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -8,8 +8,8 @@
     "test": "spec"
   },
   "scripts": {
+    "test": "jest --coverage --coverageDirectory=output/coverage/jest",
     "tdd": "jest --watch",
-    "test": "jest",
     "cover": "jest --maxWorkers=8 --coverage",
     "dev": "webpack --mode=development --colors --progress --debug --watch",
     "dev-server": "webpack-dev-server --mode=development --progress",
@@ -21,6 +21,7 @@
     "cypress": "cypress",
     "cypress-debug": "cypress open --config watchForFileChanges=true"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/apache/incubator-superset.git"
