--- a/contrib/docker/docker-compose.yml
+++ b/contrib/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MYSQL_USER: superset
       MYSQL_PASSWORD: superset
   superset:
-    image: apache/incubator-superset
+    image: qventus/superset:0.31.0
     restart: always
     environment:
       MYSQL_DB: superset
