--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,6 +15,7 @@
 # limitations under the License.
 #
 console_log==0.2.10
+coverage==4.5.3
 flake8-commas==2.0.0
 flake8-import-order==0.18
 flake8-quotes==1.0.0
@@ -22,6 +23,7 @@ flake8==3.6.0
 flask-cors==3.0.6
 ipdb==0.11
 mysqlclient==1.3.13
+nose==1.3.7
 pip-tools==3.1.0
 psycopg2-binary==2.7.5
 pycodestyle==2.4.0
