fix: exclude SIP

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -4,6 +4,7 @@ daysUntilStale: 60
 daysUntilClose: 7
 # Issues with these labels will never be considered stale
 exemptLabels:
+  - "SIP"
   - ".pinned"
   - ".security"
 # Label to use when marking an issue as stale
