--- a/contrib/docker/docker-compose.yml
+++ b/contrib/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     ports:
       - 6379:6379
+      - 9000:9000
     volumes:
       - redis:/data
   mysql:
@@ -29,9 +30,10 @@ services:
       REDIS_PORT: 6379
       # If using production, comment development volume below
       #SUPERSET_ENV: production
-      SUPERSET_ENV: production
+      SUPERSET_ENV: development
     ports:
       - 8088:8088
+      - 25:25
     command: "tail -f /dev/null"
     depends_on:
       - mysql
@@ -39,6 +41,8 @@ services:
     volumes:
       # this is needed to communicate with the postgres and redis services
       - ./superset_config.py:/home/superset/superset/superset_config.py
+      # this is needed for development, remove with SUPERSET_ENV=production
+      - ../../superset:/home/superset/superset
 volumes:
   redis:
     external: false
