--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -138,6 +138,7 @@
     "shortid": "^2.2.6",
     "underscore": "^1.8.3",
     "urijs": "^1.18.10",
+    "validate.js": "^0.12.0",
     "viewport-mercator-project": "^6.1.1"
   },
   "devDependencies": {
