fix(offline-rvf-installation): enable offline installation of rvf in raf (#123)
updated nginx name

UIC-1232

--- a/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
+++ b/superset-installer/etc/reflex-provisioner/inventory/templates/group_vars/global/all/raf/superset.yml
@@ -36,7 +36,7 @@ superset_docker_images:
     tag: "{{ superset_image_tag }}"
 
 nginx_docker_images:
-  - name: {{ nginx_docker_image_name }}
+  - name: nginx-gvs
     tag: "{{ nginx_image_tag }}"
 
 superset_kube_namespace: default
